--- a/link.html
+++ b/link.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<meta property="og:image" content="https://img.rasset.ie/000eb427-800.jpg" />
+<meta property="og:image" content="http://media2.goteborgsmagasinet.se.loopiadns.com/2016/01/ggbar-620x264.jpg" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="AFTONBLADET: Ryanair utlyser ny 24-timmars strejk 29 augusti" />
-<meta property="og:description" content="Efter att pilotfacket fortsatt inte har kommit överens med Ryanair om kollektivavtal utlöses ännu en strejk. Berörda resenärer ersätts inte för missade flyg. " />
+<meta property="og:title" content="GP: GG Bar i konkurs" />
+<meta property="og:description" content="Den populära e-sportsbaren har utlysts i konkurs med omedelbar verkan. Baren höll öppet för sista gången igår torsdag " />
 </head>
 <body>
 <meta http-equiv="Refresh" content="1; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ">
